--- a/webpage/index.html
+++ b/webpage/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship</title>
     <script src="phaser.min.js"></script> 
-    <script src="ComputerView.js" ></script> 
+    <script src="MainScene.js" ></script> 
 </head>
 <body>
     <h1>Battleship Game</h1>
