--- a/webpage/index.html
+++ b/webpage/index.html
@@ -8,7 +8,7 @@
     <script src="MainScene.js" ></script> 
 </head>
 <body>
-    <h1>Battleship Game</h1>
+    <h1>Battleship</h1>
     <div id="game-container"></div> 
 </body>
 </html>
