--- a/webpage/index.html
+++ b/webpage/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship</title>
-    <script src="phaser.min.js"></script> 
-    <script src="ShipPlacement.js"></script>
-    <script src="MainScene.js" ></script>
     <style>
         body {
             margin: 0;
@@ -50,5 +47,10 @@
     <div id="game-container">
         <!-- The Phaser canvas will be inserted here -->
     </div>
+    
+    <script src="phaser.min.js"></script>
+    <script src="TintManager.js"></script>
+    <script src="ShipPlacement.js"></script>
+    <script src="MainScene.js"></script>
 </body>
 </html>
